<?xml version="1.0" encoding="utf-8"?>
<!--
  메인 툴바 오버플로 메뉴.
  법적 링크(개인정보처리방침·이용약관)는 메인 레이아웃 공간을 차지하지
  않도록 3점 메뉴에 숨겨서 노출. Play Console 정책상 앱 내 접근 경로만
  보장되면 충분.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_privacy_policy"
        android:title="@string/menu_privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_terms_of_service"
        android:title="@string/menu_terms_of_service"
        app:showAsAction="never" />

    <!--
      디버그 전용 테스트 좌표 주입. MainActivity.onPrepareOptionsMenu 에서
      BuildConfig.DEBUG 가 아닐 때 visible=false 처리. 릴리스 APK/AAB 엔
      아이템이 표시되지 않음.
    -->
    <item
        android:id="@+id/menu_debug_inject_coords"
        android:title="@string/menu_debug_inject_coords"
        app:showAsAction="never" />

</menu>
